# ai-search-pydantic-mcp-client

./: .env.example  README.md  main.py  mcp_server_helper_tools.py  pyproject.toml  requirements.txt
sample-dataset/customers/: danielle.json  erica.json  john.json
